--- a/src/assets/css/sass/alunos/_view_table_status_cursos.scss
+++ b/src/assets/css/sass/alunos/_view_table_status_cursos.scss
@@ -60,6 +60,7 @@
         span{
             background-color: transparent !important;
             color:#333 !important; 
+            border:1px solid #999;
         }
     }
     tr[data-status='pausado']{
@@ -71,6 +72,8 @@
         span{
             background-color: transparent !important;
             color:#333 !important; 
+            border:1px solid #999;
+
         }
     }
     tr[data-status='undefined']{
