fix: erro ao adicionar aula de aluno
foi corrigido o erro que impedia de adicionar aulas para o aluno

--- a/src/components/controleAula/formAddAula.html
+++ b/src/components/controleAula/formAddAula.html
@@ -11,21 +11,28 @@
     <label class='' id='label_aula_com_falta'><input id='aula_com_falta' type='radio' name='status' value='falta'>Falta</label>
     <label class='' id='label_aula_remarcada'><input id='aula_remarcada'type='radio' name='status' value='remarcada'>Remarcada</label>
   </div>
+  <!--
     <div id='div_select_aluno'>
         <label for="nome">Nome:</label>
         <select id='select_aluno'>
             <option></option>
         </select>
     </div>
-
-  <p id='aluno_nome'></p>
-  <p id='curso_nome'></p>
-  <input type='text' id='aula_categoria' value='' required>
-    <div id='div_select_curso'><label>Curso:</label>
+        <div id='div_select_curso'><label>Curso:</label>
       <select id='select_curso'>
         <option></option>
         </select>
       </div>
+    -->
+  <div>
+
+    <input id='aluno_nome' type="text" value=""  readonly/>
+    <input  id='curso_nome' type="text" value="" readonly/>
+  </div>
+
+  <input type='text' id='aula_categoria' value='' required>
+
+
     <div id='div_select_bimestre'>
       <label>Bimestres</label>
       <select required id='select_bimestre'>
