--- a/src/assets/css/sass/alunos/_view_table_alunos.scss
+++ b/src/assets/css/sass/alunos/_view_table_alunos.scss
@@ -69,13 +69,31 @@
         height:40px;
         text-align: center;
             button{
-
+border:0px solid #333;
+border-radius: 3px;
             }
-        .btn_delete_curso{
-            //color:rgb(116, 106, 106);
+            .btn_info_aluno{
+                background-color:$primary-color;
+               color:#fff; 
+               &:hover{
+                background-color: lighten($primary-color, 5%);
+               }
+    
+            }
+            .btn_delete_curso{
+            background-color:rgb(184, 53, 53);
+           color:#fff; 
+           &:hover{
+            background-color: lighten(rgb(155, 52, 52), 5%);
+           }
+
         }
         .btn_add_curso{
-          //  color:rgb(2, 92, 2);
+           background-color:rgb(87, 146, 87);
+           color:#fff; 
+           &:hover{
+            background-color: lighten(rgb(87, 146, 87), 5%);
+           }
         }
     }
 }
