--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -2,7 +2,6 @@
 @use 'abstracts' as *;
 @use 'elements';
 @use 'update_app';
-@use 'todolist';
 @use 'cursos_info';
 @use 'controle_aula';
 @use 'contratos';
@@ -13,6 +12,9 @@
 @use 'window_bar';
 @use 'log_data';
  
+//Sass associado direto ao componente.
+@use '../../../components/todoList/sass/index';
+
 
 
 @keyframes spinner-line-fade-more {
