--- a/src/components/toDoList/viewTodolist.html
+++ b/src/components/toDoList/viewTodolist.html
@@ -19,7 +19,7 @@
         </label>
         <input type="text" class="input_search" id="input_search_titulo" placeholder="Título"/>
     </div>
-        <button class="btn-secondary" id="btn_add_tarefa">+ Tarefa</button>
+        
     
     </div>
     <table class='view_table' border='1' id='view_table_todolist'>
@@ -59,5 +59,8 @@
 
         </tbody>
     </table>
-
+    <button class="btn-secondary" id="btn_add_todo">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
+          </svg> Adicionar Tarefa</button>
 </div>
