feat(W.I.P): to-do list

--- a/src/components/toDoList/formAddTodo.html
+++ b/src/components/toDoList/formAddTodo.html
@@ -56,7 +56,7 @@
             <label>
               Data:
             </label>
-            <input id='data_created' type="date" />
+            <input readonly id='currentDate' type="date" />
         </div>
 
         <!-------------------------------------->
