feat(W.I.P): to-do list

--- a/src/components/toDoList/viewTodolist.html
+++ b/src/components/toDoList/viewTodolist.html
@@ -24,6 +24,9 @@
     </div>
     <table class='view_table' border='1' id='view_table_todolist'>
         <thead>
+            <th>
+                status
+            </th>
             <th>#
                 <button class='btn_sort' id='sort_ra' data-sort_order='ASC'>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
