feat(W.I.P): to-do list

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -878,6 +878,9 @@ inputs, .input-primary {
   font-weight: normal;
   vertical-align: middle;
 }
+.tables tr:nth-child(even), .table_info tr:nth-child(even), #view_table_users tr:nth-child(even), .view_table tr:nth-child(even) {
+  background: #dddddf;
+}
 .tables tr:hover, .table_info tr:hover, #view_table_users tr:hover, .view_table tr:hover {
   background: #ffe;
 }
@@ -4455,7 +4458,7 @@ form.forms_fluxo_caixa .div_submit input[type=submit] {
   padding-top: 2px;
   padding-left: 5px;
 }
-#form_add_todo #alarmClock, #form_add_todo #data_created {
+#form_add_todo #data, #form_add_todo #prazo {
   width: 100px !important;
 }
 
@@ -4542,6 +4545,18 @@ form.forms_fluxo_caixa .div_submit input[type=submit] {
 
 #users_content {
   padding: 1px;
+}
+
+.roundCheckboxBtn {
+  display: flex;
+  width: 25px;
+  height: 25px;
+  border: 1px solid #ccc;
+  border-radius: 50% 50%;
+  cursor: pointer;
+}
+.roundCheckboxBtn:hover {
+  background-color: #bce1e2;
 }
 
 @keyframes spinner-line-fade-more {
