--- a/src/assets/css/sass/_index.scss
+++ b/src/assets/css/sass/_index.scss
@@ -15,6 +15,8 @@
 @use '../../../components/todoList/sass' as todoList;
 @use '../../../components/users/sass' as users;
 @use '../../../components/todoList/sass/index';
+@use '../../../components/elements/sass/index' as elements;
+
 
 @keyframes spinner-line-fade-more {
   0%, 100% {
